snailor moon game correction with speed booster